<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/serviceScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:text="@string/empty_description"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:id="@+id/layoutRoomControlMoodDialogButton"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/tvTitle"
        android:gravity="center" >

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:minHeight="55dp"
            android:text="@string/roomcontrol_mood_dialog_button_ok"
            android:paddingTop="5dp"
             />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/buttonOk"
            android:minHeight="55dp"
            android:text="@string/roomcontrol_mood_dialog_button_cancel"
            android:paddingTop="5dp" />

    </RelativeLayout>

</RelativeLayout>