<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/category_image_border"
        android:orientation="vertical"
        android:padding="20dp" >

        <ImageView
            android:id="@+id/ivCategory"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:contentDescription="@string/empty_description"
            android:src="@drawable/category_sample" />

        <TextView
            android:id="@+id/tvCategoryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/category_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tvShortDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_short_description"
            android:textColor="#000000"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/spacer"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >
    </LinearLayout>

</LinearLayout>